--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,30 +1,8 @@
-<% provide(:title, 'Sign up') %>
-<h1>Sign up</h1>
-
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <%= form_with(model: @user, local: true) do |f| %>
-    <!-- Linting errors -->
-    <%= render 'shared/error_messages' %>
-    <!-- Linting errors -->
-    <%= f.label :name %>
-    <!-- Linting errors -->
-    <%= f.text_field :name, class: 'form-control' %>
-    <!-- Linting errors -->
-    <%= f.label :email %>
-    <!-- Linting errors -->
-    <%= f.email_field :email, class: 'form-control' %>
-    <!-- Linting errors -->
-    <%= f.label :password %>
-    <!-- Linting errors -->
-    <%= f.password_field :password, class: 'form-control' %>
-    <!-- Linting errors -->
-    <%= f.label :password_confirmation, "Confirmation" %>
-    <!-- Linting errors -->
-    <%= f.password_field :password_confirmation, class: 'form-control' %>
-    <!-- Linting errors -->
-    <%= f.submit "Create my account", class: "btn btn-primary" %>
-    <!-- Linting errors -->
-    <% end %>
-  </div>
-</div>
+<% provide(:title, 'Sign up' ) %>
+  <% provide(:button_text, 'Create my account' ) %>
+    <h1>Sign up</h1>
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        <%= render 'form' %>
+      </div>
+    </div>
